<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">The Biggest Quiz </string>
    <string name="db_name">questionBank_EN</string>
    <string name="newgame">New game</string>
    <string name="options">Options</string>
    <string name="store">store</string>
    <string name="share">share</string>
    <string name="Music">Music</string>
    <string name="se">Sound</string>
    <string name="soundoptions">Sound Options</string>
    <string name="languagechoice">Choose Language</string>
    <string name="best_score">Best Score:</string>
    <string name="lastscore">Score:</string>
    <string name="question">Question</string>
    <string name="position">position</string>
    <string name="subtittle">subtittle</string>
    <string name="tittle">Tittle</string>

    <!--Category tittles-->

    <string name="Technology">Technology</string>
    <string name="Arts">Arts</string>
    <string name="Mytholohgy">Mytholohgy</string>
    <string name="Geography">Geography</string>
    <string name="CategoryMusic">Music</string>
    <string name="History">History</string>
    <string name="Sports">Sports</string>

    <!--Category tittles-->


    <!--Category subtittles-->

    <string name="artknowledge">Test your knowledge\nin arts</string>
    <string name="GeekKnowledge">"Are you a real geek?\nprove it!!</string>
    <string name="mythologyknowledge">May the gods be with you</string>
    <string name="geographyKnowledge">Lets discover the world</string>
    <string name="historyknowledge">Im sure you dont rembember\nthat much</string>
    <string name="musicknowledge">Lets rock or pop</string>
    <string name="sportknowledge">Muscles and Sports</string>
    <string name="Sound">Sound</string>
    <string name="hint_edittext">Enter Country</string>
    <string name="check_answer">Check answer</string>
    <string name="hint">Ηint</string>
    <string name="high_score">Highscores</string>
    <string name="scoreboard">Scoreboard</string>
    <string name="reset_scores">Reset Scores</string>
    <string name="total_score">Total Score</string>
    <string name="x">X</string>
    <string name="help">"Country's name starts with "</string>
    <string name="warning">WARNING</string>
    <string name="this_will_reset_your_score_to_zero_and_reset_all_of_your_high_scores_so_you_can_start_fresh_do_you_want_to_continue">This will reset your score to zero and reset all of your high-scores so you can start fresh. Do you want to continue?</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="skip">Skip</string>
    <string name="skipflag">Skip</string>
    <string name="submit">submit</string>
    <string name="title_activity_puzzle">PuzzleActivity</string>
    <string name="restart">restart</string>
    <string name="success">success</string>
    <string name="ok">ok</string>
    <string name="exit">exit</string>
    <string name="complete">complete</string>
    <string name="next">next</string>
    <string name="points_300">250</string>
    <string name="puzzle_skip">skip</string>

    <!--Category subtittles-->


</resources>
