<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="350dp"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:background="@color/blueDark"
    android:orientation="vertical"
    android:padding="15dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="@dimen/imagesTOPscreenOption"
        android:layout_marginTop="@dimen/imagesTOPscreenOption"
        android:fontFamily="@font/unlock"
        android:text="@string/warning"
        android:textColor="@color/ColorFonts"
        android:textSize="40sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#bdbdbd" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/marginButton"
        android:fontFamily="@font/unlock"
        android:text="@string/this_will_reset_your_score_to_zero_and_reset_all_of_your_high_scores_so_you_can_start_fresh_do_you_want_to_continue"
        android:textColor="@color/ColorFonts"
        android:textSize="18sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/marginButton"
        android:baselineAligned="false"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/yes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/greenbutton"
                android:fontFamily="@font/unlock"
                android:text="@string/yes"
                android:textSize="18sp" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/no"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/redbutton"
                android:fontFamily="@font/unlock"
                android:text="@string/no"
                android:textSize="18sp" />


        </LinearLayout>


    </LinearLayout>
</LinearLayout>