<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:ignore="ContentDescription"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.thequizapp.MenuActivity"
    android:background="@drawable/purple"
    >


    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="@dimen/imagesTOPscreenMenu"
        android:src="@drawable/quiz"
        android:id="@+id/quizicon"
        />

<LinearLayout
    android:id="@+id/Buttonsmenu"
    android:layout_below="@id/quizicon"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    >

    <Button
        android:id="@+id/newgame"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/buttonSize"
        android:layout_marginRight="@dimen/buttonSize"
        android:layout_marginTop="@dimen/buttondistance"
        android:background="@drawable/yellobutton"
        android:text="@string/newgame"
        android:textAllCaps="true"
        android:textSize="@dimen/textSizes"
        />

    <Button
        android:id="@+id/achievments"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/scoreboard"
        android:layout_marginLeft="@dimen/buttonSize"
        android:layout_marginRight="@dimen/buttonSize"
        android:layout_marginTop="@dimen/buttondistance"
        android:background="@drawable/redbutton"
        android:textAllCaps="true"
        android:textSize="@dimen/textSizes"
        />

    <Button
        android:id="@+id/options"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/options"
        android:layout_marginLeft="@dimen/buttonSize"
        android:layout_marginRight="@dimen/buttonSize"
        android:layout_marginTop="@dimen/buttondistance"
        android:background="@drawable/purplebutton"
        android:textAllCaps="true"
        android:textSize="@dimen/textSizes"
        />

    <Button
        android:id="@+id/store"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/store"
        android:layout_marginLeft="@dimen/buttonSize"
        android:layout_marginRight="@dimen/buttonSize"
        android:layout_marginTop="@dimen/buttondistance"
        android:background="@drawable/greenbutton"
        android:textAllCaps="true"
        android:textSize="@dimen/textSizes"
        />

</LinearLayout>

<LinearLayout

    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_below="@id/Buttonsmenu"
    android:orientation="horizontal"
    android:layout_alignParentBottom="true"
    android:layout_centerInParent="true"
    >
    <ImageButton

        android:layout_width="50dp"
        android:layout_height="45dp"
        android:layout_gravity="center"
        android:background="@drawable/twitter"
        android:id="@+id/twitter"
        android:layout_marginRight="50dp"
        android:layout_marginEnd="50dp"

        />

    <ImageButton
        android:layout_width="50dp"
        android:layout_height="45dp"
        android:layout_gravity="center"
        android:id="@+id/likefb"
        android:background="@drawable/like"
        android:layout_marginRight="50dp"
        android:layout_marginEnd="50dp"
        />

    <ImageButton
        android:layout_width="50dp"
        android:layout_height="45dp"
        android:layout_gravity="center"
        android:id="@+id/share"
        android:background="@drawable/share"
        />

</LinearLayout>


</RelativeLayout>

