<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:background="@drawable/purple"
tools:context="com.example.android.thequizapp.MultipleChActivity"
tools:ignore="ContentDescription">

<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/image"
    android:layout_alignParentTop="true"
    >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/unlock"
        android:id="@+id/skipQuestion"
        android:text="@string/skip"
        android:layout_centerVertical="true"
        android:layout_alignParentRight="true"
        android:layout_marginRight="20dp"
        android:textAllCaps="true"
        android:textColor="@color/ColorFonts"
        android:textSize="22sp"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="20dp" />


    <ImageView
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_marginTop="10dp"
        android:layout_centerInParent="true"
        android:src="@drawable/quiz"
        />

    <ImageButton
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_alignParentLeft="true"
        android:layout_centerVertical="true"
        android:layout_marginLeft="20dp"
        android:background="@drawable/home"
        android:layout_gravity="center"
        android:id="@+id/homeButton"
        android:layout_alignParentStart="true"
        android:layout_marginStart="20dp" />

</RelativeLayout>


<RelativeLayout
    android:id="@+id/HeaderQuestion"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_below="@id/image"
    android:layout_marginBottom="30dp"
    android:layout_marginLeft="20dp"
    android:layout_marginRight="20dp"
    android:layout_marginTop="20dp">

    <TextView
        android:id="@+id/timer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/unlock"
        android:textColor="@color/ColorFonts"
        android:text="0"
        android:background="@drawable/circlebackground"
        android:gravity="center"
        android:layout_centerInParent="true"
        android:textSize="30sp" />


    <TextView
        android:id="@+id/score0"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/unlock"
        android:textColor="@color/ColorFonts"
        android:background="@drawable/circlebackground"
        android:gravity="center"
        android:text="0"
        android:textSize="30sp" />




    <ImageView
        android:id="@+id/Rheart3"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_centerInParent="true"
        android:src="@drawable/lifes" />

    <ImageView
        android:id="@+id/Rheart2"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_centerInParent="true"
        android:layout_marginEnd="4dp"
        android:layout_marginRight="4dp"
        android:layout_toLeftOf="@id/Rheart3"
        android:layout_toStartOf="@id/Rheart3"
        android:src="@drawable/lifes" />

    <ImageView
        android:id="@+id/Rheart1"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_centerInParent="true"
        android:layout_marginEnd="4dp"
        android:layout_marginRight="4dp"
        android:layout_toLeftOf="@id/Rheart2"
        android:layout_toStartOf="@id/Rheart2"
        android:src="@drawable/lifes" />


</RelativeLayout>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/questiollayout"
    android:layout_below="@+id/HeaderQuestion"
    android:orientation="horizontal"
    android:background="@drawable/questionbackground"
    android:padding="30dp"
    >
    <TextView
        android:id="@+id/question"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/question"
        android:textSize="24sp" />
</LinearLayout>


<RadioGroup
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/RadioGroup"
    android:layout_below="@id/questiollayout"
    android:layout_marginTop="@dimen/marginButton"
    android:background="@drawable/questionbackground"
    android:gravity="center"

    >

    <RadioButton
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/radibutton1"
        android:padding="10dp"
        />

    <RadioButton
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/radibutton2"
        android:padding="10dp"
        />

    <RadioButton
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/radibutton3"
        android:padding="10dp"
        />

    <RadioButton
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/radibutton4"
        android:padding="10dp"
        />

</RadioGroup>


<Button
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_below="@id/RadioGroup"
    android:id="@+id/submit"
    android:text="@string/submit"
    android:layout_marginTop="@dimen/marginButton"
    android:background="@drawable/greenbutton"
    android:layout_centerInParent="true"
    />

<TextView
    android:id="@+id/position"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/position"
    android:layout_alignParentBottom="true"
    android:textColor="#ffff" />


</RelativeLayout>

