<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/purple"
    tools:context="com.example.android.thequizapp.FlagActivity"
    tools:ignore="ContentDescription">

    <RelativeLayout
        android:id="@+id/flag_image"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true">

        <TextView
            android:id="@+id/skip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="20dp"
            android:layout_marginRight="20dp"
            android:fontFamily="@font/unlock"
            android:text="@string/skipflag"
            android:textAllCaps="true"
            android:textColor="@color/ColorFonts"
            android:textSize="22sp" />


        <ImageView
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_centerInParent="true"
            android:layout_marginTop="10dp"
            android:src="@drawable/quiz" />

        <ImageButton
            android:id="@+id/home"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_gravity="center"
            android:layout_marginLeft="20dp"
            android:layout_marginStart="20dp"
            android:background="@drawable/home" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/flag_HeaderQuestion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/flag_image"
        android:layout_marginBottom="30dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp">


        <TextView
            android:id="@+id/flag_questionNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/circlebackground"
            android:fontFamily="@font/unlock"
            android:gravity="center"
            android:text="0"
            android:textColor="@color/ColorFonts"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/flag_score0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:background="@drawable/circlebackground"
            android:fontFamily="@font/unlock"
            android:gravity="center"
            android:text="0"
            android:textColor="@color/ColorFonts"
            android:textSize="30sp" />


        <ImageView
            android:id="@+id/flag_heart3"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_centerInParent="true"
            android:src="@drawable/lifes" />

        <ImageView
            android:id="@+id/flag_heart2"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_centerInParent="true"
            android:layout_marginEnd="4dp"
            android:layout_marginRight="4dp"
            android:layout_toLeftOf="@id/flag_heart3"
            android:layout_toStartOf="@id/flag_heart3"
            android:src="@drawable/lifes" />

        <ImageView
            android:id="@+id/flag_heart1"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_centerInParent="true"
            android:layout_marginEnd="4dp"
            android:layout_marginRight="4dp"
            android:layout_toLeftOf="@id/flag_heart2"
            android:layout_toStartOf="@id/flag_heart2"
            android:src="@drawable/lifes" />


    </RelativeLayout>

    <ImageView
        android:id="@+id/imagecountry"
        android:layout_width="220dp"
        android:layout_height="120dp"
        android:layout_below="@+id/flag_HeaderQuestion"
        android:layout_centerInParent="true"
        android:adjustViewBounds="true"
        android:maxHeight="120dp"
        android:maxWidth="220dp"
        android:scaleType="centerCrop" />


    <LinearLayout
        android:id="@+id/buttons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/imagecountry"
        android:layout_gravity="center"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="35dp"
        android:background="@drawable/backgroundcorner"
        android:orientation="vertical">

        <EditText
            android:id="@+id/flag_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="@dimen/marginButton"
            android:layout_marginLeft="75dp"
            android:layout_marginRight="75dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/editextstyle"
            android:gravity="center"
            android:hint="@string/hint_edittext"
            android:inputType="text"
            android:padding="12dp"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <Button
            android:id="@+id/flag_checkanswer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/buttondistance"
            android:layout_marginLeft="80dp"
            android:layout_marginRight="80dp"
            android:background="@drawable/redbutton"
            android:text="@string/check_answer" />

        <Button
            android:id="@+id/flag_hints"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:layout_marginLeft="80dp"
            android:layout_marginRight="80dp"
            android:background="@drawable/greenbutton"
            android:text="@string/hint" />

    </LinearLayout>


</RelativeLayout>

